@@ -1,3 +1,8 @@
+2009-05-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* src/Makefile.am: Refactor and add sublibs to libthai.la dependencies,
+	so the final library gets rebuilt when its sub-libraries are changed.
+
 2009-05-22  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thbrk/brk-maximal.c (th_isleadable): Consonant following
